<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/remote_office"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:nextFocusRight="@+id/remote_hospital"
            android:nextFocusDown="@+id/remote_up"
            android:background="@drawable/blue_btn"
            android:text="@string/MainActivity_java_100"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/remote_hospital"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:nextFocusLeft="@+id/remote_office"
            android:nextFocusDown="@+id/remote_up"
            android:background="@drawable/blue_btn"
            android:layout_marginLeft="30dp"
            android:text="@string/MainActivity_java_99"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/remote_up"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/white_btn"
            android:nextFocusUp="@+id/remote_hospital"
            android:nextFocusRight="@+id/remote_next"
            android:text="@string/DeptActivity_java_27"
            android:textColor="#0072b9"
            android:textSize="18sp" />

        <Button
            android:id="@+id/remote_next"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/white_btn"
            android:nextFocusUp="@+id/remote_hospital"
            android:nextFocusLeft="@+id/remote_up"
            android:nextFocusRight="@+id/remote_back"
            android:text="@string/DeptActivity_java_31"
            android:textColor="#0072b9"
            android:textSize="18sp" />

        <Button
            android:id="@+id/remote_back"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:nextFocusUp="@+id/remote_hospital"
            android:nextFocusLeft="@+id/remote_next"
            android:background="@drawable/white_btn"
            android:text="@string/DoctorActivity_java_40"
            android:textColor="#0072b9"
            android:textSize="18sp" />
    </LinearLayout>

    <com.open.androidtvwidget.leanback.recycle.RecyclerViewTV
        android:id="@+id/remote_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:focusable="false"/>

    <com.open.androidtvwidget.view.MainUpView
        android:id="@+id/remote_upview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>