<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_bg0"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/doctor_details_protrait"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_user"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctor_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/doctor_details_xml_1"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/doctor_details_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/white"
                android:text="@string/doctor_details_xml_2"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/doctor_details_edu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@android:color/white"
                android:text="@string/doctor_details_xml_3"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/doctor_details_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingMultiplier="1.5"
        android:textSize="20sp"
        android:text="  @string/doctor_details_xml_4vsjshdghsdgjsgdhsgdjhsgdjhsdg@string/doctor_details_xml_5"
        android:textColor="@android:color/white"/>
</LinearLayout>